# kirami-plugin-beauty-rate

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
kirami_plugin_beauty_rate/: __init__.py  config.py  service.toml  utils.py
